Finished product. Everything seems to be in order.

--- a/index.html
+++ b/index.html
@@ -44,17 +44,37 @@
 
 
 						<div class="form-next-button">
-							<button></button>
+							<button>Next</button>
 						</div>
 
 
-						<div class="form-staysigned-trouble"></div>
+						<div class="form-staysigned-trouble">
+							<div class="form-staysigned">
+								<input type="checkbox" />
+								<div>Stay signed in</div>
+							</div>
+
+							<div class="form-trouble">
+								<a href="#">Trouble signing in?</a>
+							</div>
+						</div>
+
+							
+
+						<div class="form-issues-box">
+							<div class="form-issue-item1">
+								<div>**</div>
+								<div>Account security issue</div>
+							</div>
+							<div class="form-issue-item2"><a href="#">More information about the account security issue.</a></div>
+							<div class="form-issue-item3"><a href="#">Our notice to potentially affected users.</a></div>
+						</div>
 
 
-						<div class="form-issues-box"></div>
-
-
-						<div class="form-no-account"></div>
+						<div class="form-no-account">
+							<div>Don't have an account?</div>
+							<a href="#">&nbsp Sign up</a>
+						</div>
 					</div>
 				</div>
 			</div>
